@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-server.in,v 1.11 2004/02/23 11:20:58 ko1 Exp $
+;; $Id: kahua-server.in,v 1.12 2004/05/07 02:47:30 nobsun Exp $
 
 ;; This script would be called with a name of the actual application server
 ;; module name.
@@ -32,12 +32,14 @@
   (export primary-database-name
           main-proc
           kahua-error-proc
+          kahua-app-args
           initialize-main-proc
           kahua-server-main)
   )
 (select-module kahua-server)
 
 (define primary-database-name (make-parameter #f))
+(define kahua-app-args (make-parameter #f))
 
 (define (kahua-application-environment)
   (let ((sandbox (make-sandbox-module))
@@ -138,6 +140,7 @@
     (kahua-init conf-file :user user)
     (set! kahua-app-server (kahua-application-environment))
     (initialize-plugins)
+    (kahua-app-args (cdr mods))
     (load-kahua-module (car mods))
     (let* ((worker-id (kahua-init-server 
 		       (car (string-split (sys-basename (car mods)) #\.))
