@@ -1,3 +1,9 @@
+2004-05-07  Nobuo Yamashita  <nobsun@sampou.org>
+
+	* src/kahua-server.in:
+	Added and exported kahua-app-args parameter in order to pass
+	:argument in app-servers to kahua applications.
+	
 2004-04-27  Nobuo Yamashita  <nobsun@sampou.org>
 
 	* Version 0.2.4 released.
